# armesto

./: Cargo.toml
debian/: changelog  control
docs/: notification-backend-design.md
migrations/: 0001_init.sql
src/: client.rs  config.rs  dbus.rs  dbus_support.rs  error.rs  lib.rs  main.rs  model.rs  notification.rs  repository.rs  rofi.rs  server.rs
tests/: dbus_integration.rs  repository_integration.rs
