[package]
name = "armesto"
version = "0.1.0"
description = "DB-backed Linux desktop notification backend"
authors = ["Ken Gilmer <kgilmer@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.81.0"

[lib]
name = "armesto"
path = "src/lib.rs"

[[bin]]
name = "armesto-server"
path = "src/bin/armesto-server.rs"

[[bin]]
name = "armesto-cli"
path = "src/bin/armesto-cli.rs"

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
rusqlite = { version = "0.37.0", features = ["bundled"] }
dbus = "0.9.7"
dbus-crossroads = "0.5.2"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
